[gd_scene load_steps=7 format=2]

[ext_resource path="res://Actors/Components/DetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hboxes/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hboxes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/Components/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Actors/Summon.gd" type="Script" id=5]
[ext_resource path="res://UI/HealthDisplay.tscn" type="PackedScene" id=6]

[node name="Summon" type="KinematicBody2D" groups=[
"entity",
"player_entity",
"player_summon",
]]
collision_layer = 2
script = ExtResource( 5 )

[node name="HealthDisplay" parent="." instance=ExtResource( 6 )]

[node name="Stats" parent="." instance=ExtResource( 4 )]

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HitBox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 8

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 4

[node name="DetectionZone" parent="." instance=ExtResource( 1 )]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
[connection signal="health_recovered" from="Stats" to="HealthDisplay" method="_on_health_changed"]
[connection signal="health_reduced" from="Stats" to="HealthDisplay" method="_on_health_changed"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
